0.10.0 (currently working on)
- [#5026] Fix: Deprecation messages about the flash message API in TYPO3 CMS 6.1
- [#5022] Fix: Test errors in tx_seminars_FrontEnd_RequirementsListTest with TYPO3 CMS 6.1
- [#4709] Fix: Crash on the registration page with static_info_tables 6.0.4 under TYPO3 6.0.6
- [#5021] Fix: Test error in tx_seminars_BackEnd_GeneralEventMailFormTest in TYPO3 CMS 6.1
- [#5020] Fix: Error massage: The extension CSS Styled Content is not loaded
- [#5016] Fix: Stop including template.php in pi2
- [#5008] Fix: Call loadTCA only for TYPO3 CMS < 6.1
- [#4572] Fix: Add .htaccess to all folders with private resources
- [#4648] Fix: Drop early __destruct calls
- [#4879] Fix: Use t3lib_div::makeInstance instead of ObjectFactory::make
- [#5003] Fix: Make sure the FORMidable configuration always is an array
- [#4998] Cleanup: Use type[] instead of array<type>
- [#4986] Fix: Getter for billing address phone uses the wrong field name
- [#4985] Fix: Add the additional attendees before sending the e-mails
- [#4983] Feature: Add a hook point that would allow a HTML subpart to the notification e-mail
- [#4961] Feature: Use separate FE user data labels in the notification e-mail
- [#4958] Feature: Add wrappers around the billing address fields on the confirmation page
- [#4957] Feature: Add wrappers for the FE user data on the first registration page
- [#4940] Fix: Label for fe_user.telephone missing in the CSV export
- [#4941] Feature: Add a CSV label for attendances.crdate
- [#4952] Feature: Add "sep" marker to the CSV
- [#4950] Feature: Add the interests to the thank-you e-mail
- [#4946] Cleanup: Add and use seminar::getFirstOrganizer
- [#4948] Fix: Drop the colon after the labels on the confirmation page
- [#4947] Fix: Foods and lodgings are missing on the confirmation page
- [#4929] Feature: Add the fields "food" and "accommodation" to the thank-you e-mail
- [#4938] Change: Use labels for all billing address fields on the confirmation page