@@ -1,4 +1,5 @@
 0.10.0 (currently working on)
+- [#5023] Fix: Test failures in tx_seminars_FrontEnd_EventEditorTest in TYPO3 CMS 6.1
 - [#5026] Fix: Deprecation messages about the flash message API in TYPO3 CMS 6.1
 - [#5022] Fix: Test errors in tx_seminars_FrontEnd_RequirementsListTest with TYPO3 CMS 6.1
 - [#4709] Fix: Crash on the registration page with static_info_tables 6.0.4 under TYPO3 6.0.6
